--- a/fancyInput.css
+++ b/fancyInput.css
@@ -8,7 +8,7 @@
 .fancyInput :-moz-placeholder{ color:rgba(255,255,255,0.2); } /* deprecated. but works for now. should use double '::'*/
 .fancyInput :-webkit-placeholder{ color:rgba(255,255,255,0.2); }
 
-.fancyInput{ display:inline-block; letter-spacing:-1px; text-shadow:0 2px 5px rgba(0,0,0,.6); white-space:nowrap; width:auto; font-family:'Fjalla One', sans-serif; position:relative; }
+.fancyInput{ display:inline-block; letter-spacing:-1px; text-shadow:0 2px 5px rgba(0,0,0,.6); white-space:nowrap; width:auto; position:relative; }
 .fancyInput.textarea{ white-space:normal; overflow:auto; }
 	.fancyInput input, textarea{ color:transparent; position:absolute; z-index:2; width:100%; border:0; outline:0; top:0px; left:0; background:none; padding:inherit; padding-bottom:0; font-family:'Fjalla One', sans-serif; font-size:inherit; letter-spacing:-1px;  -moz-box-sizing:border-box; -webkit-box-sizing:border-box; }
 	.fancyInput input{ top:1px; left:-1px; padding-right:0; }
